feat: login and sessions (back-end)
